# 2020Fall_Atlas_IoT_Lab3

./: README.md
PartOne/: Button.cpp  CMakeLists.txt  LightSensor.cpp  README  RedLED.cpp  SoundSensor.cpp
PartTwo/: Atlas_IoTDDL.xml  IoT_Application.cpp  README
